--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "eslint-levabala-config",
+  "name": "eslint-config-levabala",
   "version": "1.0.0",
   "description": "",
-  "main": "./distribution/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "babel source --presets babel-preset-es2015 --out-dir distribution",
+    "build": "babel source --presets babel-preset-es2015 --out-dir ./",
     "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/levabala/eslint-levabala-config.git"
+    "url": "git+https://github.com/levabala/eslint-config-levabala.git"
   },
   "author": "levabala",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/levabala/eslint-levabala-config/issues"
+    "url": "https://github.com/levabala/eslint-config-levabala/issues"
   },
-  "homepage": "https://github.com/levabala/eslint-levabala-config#readme",
+  "homepage": "https://github.com/levabala/eslint-config-levabala#readme",
   "dependencies": {
     "yamljs": "^0.3.0"
   },
