--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "eslint-config-levabala",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "./distribution/index.js",
   "scripts": {
-    "build": "babel source --presets babel-preset-es2015 --out-dir ./",
+    "build": "babel source --presets babel-preset-es2015 --out-dir /distribution",
     "prepublish": "npm run build"
   },
   "repository": {
