--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "eslint-config-levabala",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./distribution/index.js",
   "scripts": {
-    "build": "babel source --presets babel-preset-es2015 --out-dir /distribution",
+    "build": "babel source --presets babel-preset-es2015 --out-dir ./distribution",
     "prepublish": "npm run build"
   },
   "repository": {
